# QueensCorsarTgBot

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: config.rs  logger.rs  main.rs  prelude.rs  utility.rs
src/core/: application.rs  common.rs  dispatcher.rs  dispatchers.rs  handler.rs  handlers.rs  listeners.rs  mod.rs  provider.rs  sender.rs  senders.rs  server.rs  servers.rs
src/qcproto/: mod.rs
