[package]
name = "queens_corsar_tg"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = "1.0.147"
serde_json = "1.0.87"
slog = "2.7.0"
slog-term = "2.9.0"
slog-async = "2.7.0"
chrono = "0.4.22"
telegram-bot-api = "0.1.2"
http = "0.2.8"

[dependencies.tokio]
version = "1"
features = ["full"]
